# stm32-serprog-rs

./: Cargo.toml
src/: address.rs  buffer.rs  command.rs  constants.rs  data_utils.rs  error.rs  main.rs  opcode.rs  response_packet.rs  serprog.rs  spi.rs
